# curlee

./: .clang-format  .clang-tidy  .gitignore  C++23 Best Practices for LLM Agents.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  training_data.txt
.github/: copilot-instructions.md
.github/prompts/: add-z3-bridge.prompt.md  continue_issues.prompt.md  diagnostics-golden-tests.prompt.md  increase_teset_coverage.prompt.md  new_feature_or_bug.prompt.md  plan-act-reflect.prompt.md  python-shield.prompt.md  synthetic-dataset.prompt.md  work_on_open_tickets.prompt.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
cmake/: FindZ3.cmake  install_smoke.cmake
docs/: LSP.md  LSP_UX.md  ONTOLOGY.md  PYTHON_INTEROP.md  QUALITY.md  README.md  TENSOR_IR.md
examples/: linear_capability.curlee  linear_ownership.curlee  mvp_run_control_flow.curlee  mvp_run_int.curlee
include/curlee/bundle/: bundle.h
include/curlee/cli/: cli.h
include/curlee/compiler/: emitter.h  tensor_backend.h  tensor_ir.h
include/curlee/diag/: diagnostic.h  render.h
include/curlee/interop/: python_ffi.h
include/curlee/lexer/: lexer.h  token.h
include/curlee/parser/: ast.h  parser.h
include/curlee/resolver/: resolver.h  symbol.h
include/curlee/runtime/: capabilities.h
include/curlee/source/: line_map.h  source_file.h  span.h
include/curlee/types/: type.h  type_check.h
include/curlee/verification/: checker.h  predicate_lowering.h  solver.h
include/curlee/vm/: bytecode.h  chunk_codec.h  value.h  vm.h
scripts/: benchmark.py  coverage.sh  format.sh  generate_correct_samples.py  gh_pr_patch_body.sh  smoke.sh  tidy.sh
src/: main.cpp
src/bundle/: bundle.cpp
src/cli/: cli.cpp
src/compiler/: emitter.cpp  tensor_backend.cpp  tensor_ir.cpp
src/diag/: render.cpp
src/interop/: python_ffi.cpp  python_runner_main.cpp
src/lexer/: lexer.cpp
src/lsp/: lsp.cpp
src/parser/: parser.cpp
src/resolver/: resolver.cpp
src/source/: line_map.cpp  source_file.cpp
src/types/: type_check.cpp
src/verification/: checker.cpp  predicate_lowering.cpp  solver.cpp
src/vm/: chunk_codec.cpp  vm.cpp
tests/: bundle_tests.cpp  bwrap_fake.cpp  chunk_codec_tests.cpp  cli_bad_args_tests.cpp  cli_bundle_golden_tests.cpp  cli_bundle_tests.cpp  cli_check_duplicate_function_tests.cpp  cli_check_import_cycle_tests.cpp  cli_check_import_depth_tests.cpp  cli_check_import_error_tests.cpp  cli_check_import_order_tests.cpp  cli_check_import_path_tests.cpp  cli_check_imported_main_tests.cpp  cli_diagnostics_golden_tests.cpp  cli_fmt_tests.cpp  cli_fuel_tests.cpp  cli_lex_parse_error_tests.cpp  cli_version_tests.cpp  compiler_tests.cpp  diag_render_tests.cpp  diagnostic_golden_tests.cpp  e2e_tests.cpp  fake_exes_tests.cpp  fuzz_regression_tests.cpp  header_smoke_tests.cpp  interop_tests.cpp  lexer_fuzz.cpp  lexer_tests.cpp  line_map_tests.cpp  lsp_hover_golden_tests.cpp  lsp_internal_tests.cpp  parser_fuzz.cpp  parser_internal_tests.cpp  parser_tests.cpp  python_runner_fake_close_stderr.cpp  python_runner_fake_close_stdin.cpp  python_runner_fake_close_stdout.cpp  python_runner_fake_env_check.cpp  python_runner_fake_error.cpp  python_runner_fake_error_escapes.cpp  (+23 more)
tests/cli_bundle/: current_v1.bundle  current_v1.stdout.golden  future_v2.bundle  future_v2.stderr.golden
tests/cli_diagnostics/: README.md  check_ensures_fail.golden  check_if_condition_type_error.golden  check_import_ambiguous.golden  check_import_missing.golden  check_not_implemented.golden  check_python_ffi_requires_unsafe.golden  check_requires_divide.golden  check_type_error.golden  check_unknown_name.golden  missing_file.golden  run_python_ffi_missing_cap.stderr.golden  run_python_ffi_not_implemented.stderr.golden  run_python_ffi_runner_env_sanitized.stdout.golden  run_python_ffi_runner_error.stderr.golden  run_python_ffi_runner_output_limit.stderr.golden  run_python_ffi_runner_timeout.stderr.golden  run_python_ffi_sandbox_exec_failed.stderr.golden  run_python_ffi_sandbox_required.stderr.golden  run_struct_not_runnable.golden  run_success.stdout.golden
tests/correct_samples/: sample_0001.curlee  sample_0002.curlee  sample_0003.curlee  sample_0004.curlee  sample_0005.curlee  sample_0006.curlee  sample_0007.curlee  sample_0008.curlee  sample_0009.curlee  sample_0010.curlee  sample_0011.curlee  sample_0012.curlee  sample_0013.curlee  sample_0014.curlee  sample_0015.curlee  sample_0016.curlee  sample_0017.curlee  sample_0018.curlee  sample_0019.curlee  sample_0020.curlee  sample_0021.curlee  sample_0022.curlee  sample_0023.curlee  sample_0024.curlee  sample_0025.curlee  sample_0026.curlee  sample_0027.curlee  sample_0028.curlee  sample_0029.curlee  sample_0030.curlee  sample_0031.curlee  sample_0032.curlee  sample_0034.curlee  sample_0035.curlee  sample_0036.curlee  sample_0037.curlee  sample_0038.curlee  sample_0039.curlee  sample_0040.curlee  sample_0041.curlee  (+440 more)
tests/diagnostics/: README.md  basic.curlee  basic.golden  multiline.curlee  multiline.golden
tests/fixtures/: check_ensures_fail.curlee  check_if_condition_type_error.curlee  check_python_ffi_requires_unsafe.curlee  check_refinement_implies.curlee  check_requires_divide.curlee  check_requires_if_path_sensitive.curlee  check_requires_while_condition_fact.curlee  check_struct_ok.curlee  check_type_error.curlee  check_unknown_name.curlee  hello.cur  hello.curlee  lexable.cur  lsp_ast_traversal.curlee  lsp_hover_call.curlee  lsp_hover_dedup.curlee  lsp_hover_expr.curlee  lsp_hover_ops.curlee  lsp_hover_ops2.curlee  run_infinite_loop.curlee  run_python_ffi.curlee  run_success.curlee
tests/fixtures/import_ambiguous/: entry.curlee  shared.curlee
tests/fixtures/import_ambiguous/sub/: m.curlee  shared.curlee
tests/fixtures/import_missing/: entry.curlee
tests/fixtures/qualified_call/: main.curlee
tests/fixtures/qualified_call/mymod/: math.curlee
tests/lsp_hover/: hover_call.expected
tests/run/: addition.curlee  call_return.curlee  division_by_zero.fail.curlee  if_else.curlee  let_add.curlee  while_return.curlee
